--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qrusage",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "quick getrusage(2)",
   "license": "Apache-2.0",
   "main": "qrusage.js",
@@ -16,7 +16,7 @@
     "node": ">=0.0.0"
   },
   "scripts": {
-    "test": "nodeunit"
+    "test": "qnit test-*"
   },
   "keywords": [
     "Andras",
@@ -29,8 +29,9 @@
     "used"
   ],
   "dependencies": {
+    "nan": "2"
   },
   "devDependencies": {
-    "nodeunit": "*"
+    "qnit": "*"
   }
 }
