--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ preinstall:
   - npm install npm@2.15.0
 after_success:
   - if [ `node -p 'process.version.slice(0, 3)'` != "v8." ]; then exit; fi
-  - npm install -g nyc@8.4.0
-  - npm install -g codecov
-  - npm run coverage && codecov
+  - npm install -g nyc@8.4.0 codecov coveralls
+  - nyc -r text -r lcov npm test && codecov
+  - nyc report -r text-lcov | coveralls
