Fix #2: Use new v8 GetBackingStore() API when supported
 - check for V8_MAJOR_VERSION >= 8, and use new GetBackingStore() API if so

 - See nodejs/nan#888 for more details

 - Relax dependency on nan ~2.14 so this can build on modern Node.js versions
   with nan >= 2.14.1

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "keywords": [ "Andras", "quick", "fast", "getrusage", "cpu", "memory", "resources", "used" ],
 
   "dependencies": {
-    "nan": "2.14.0"
+    "nan": "^2.14.0"
   },
   "devDependencies": {
     "qnit": "^0.25"
