--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         # 0.10 and 0.8 might need a newer qmock
         # NOTE: github actions have deprecated nodejs 0-6 (possibly more), need to roll own
-        node: [ 8, 12, 16, 13.8.0 ]
+        node: [ 12, 16, 13.8.0 ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
